--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "element-ui": "^2.13.2",
     "js-cookie": "^2.2.1",
     "mockjs": "^1.1.0",
+    "path-to-regexp": "^6.2.0",
     "vue": "^2.6.11",
     "vue-cookies": "^1.7.4",
     "vue-router": "^3.2.0",
@@ -26,6 +27,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "element-theme-chalk": "^2.13.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.26.5",
